fix: align code-group content

--- a/packages/nimiq-vitepress-theme/src/assets/code-blocks.css
+++ b/packages/nimiq-vitepress-theme/src/assets/code-blocks.css
@@ -151,7 +151,6 @@ div[class*='language-lh-1'] {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     margin-top: 0;
-    padding-top: 8px;
     padding-bottom: 16px;
     padding-left: 2rem;
     padding-right: 2rem;
@@ -261,6 +260,14 @@ div[class*='language-lh-1'] {
 }
 
 .vp-code-group {
+  .blocks > div[class*='language-'] {
+    margin: 0;
+    padding-top: 16px;
+    background-color: var(--colors-neutral-50);
+    border-radius: 0 0 0.5em 0.5em;
+    outline: none;
+  }
+
   /* We only apply the active styles if there are more than one tab */
   .tabs:has(> input + label + input) {
     /* Set monochromatic style for unchecked labels */
